--- a/spring-sso-google/src/main/resources/application.yml
+++ b/spring-sso-google/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
       client:
         registration:
           google :
-            clientId: 1066975106292-g3gceplra8m3o00q3qqlc9srj2v07iiq.apps.googleusercontent.com
-            clientSecret: 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
+            clientId: 
+            clientSecret: 
 
 
 
